2007-11-11 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Added support for 18f2321

2007-11-11 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Fixed bad information on 12f509 and 18f6722 in processor data

2007-11-10 David Barnett <daviebdawg@gmail.com>
  * Fixed old version number to 0.13.5 (actually released 2007-10-27)

2007-11-08 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Fixed gpasm absolute mode to give "maximum range" warnings between
  program memory and eeprom

2007-11-08 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Fixed maxrom to respect max eeprom address (but temporarily
  removed warnings for addresses in between)

2007-11-05 David Barnett <daviebdawg@gmail.com>
  * [gplink] Applied patch from Robert Pearce to fix address/line mapping in
  COD files

2007-11-05 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Updated gpcfg-table.c based on MPASMWIN 5.13 and script by Michael
  Ballbach

2007-11-05 David Barnett <daviebdawg@gmail.com>
  * Changed 'FCMEM' to 'FCMEN' in p18f4550.inc

2007-10-28 David Barnett <daviebdawg@gmail.com>
  * Applied patch from Alain Portal to fix French manpage

2007-10-28 David Barnett <daviebdawg@gmail.com>
  * Applied patch from Alain Portal to fix manpage formatting

2007-10-27 David Barnett <daviebdawg@gmail.com>
  * gputils 0.13.5 Released

2007-09-17 Scott Dattalo <scott@dattalo.com>
  * [gpasm] Single character strings were not being interpreted correctly for
  the .direct macros.

2007-09-28 David Barnett <daviebdawg@gmail.com>
  * [gputils] Fixed bsr location for p18f6585, p18f6680, p18f8585 and p18f8680

2007-09-17 Scott Dattalo <scott@dattalo.com>
  * [gputils] Added support for the p12f510.

2007-06-26 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Report message when RES directive size evaluates to zero (or
  truncates on PIC18)
  * [gpasm] Report error when ORG has odd address on PIC18

2007-06-26 David Barnett <daviebdawg@gmail.com>